recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: value -= is not a member of Int
	steps-=1
             ^Spiral:8: error: not found: value lengh
	lengh+=increment
        ^